<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/txt_city_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_the_city"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinner_city"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:entries="@array/cities"
        android:prompt="@string/choose" />

    <TextView
        android:id="@+id/txt_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_city_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="Bandaragama"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_min_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_temperature"
        android:text="23"
        android:textSize="40sp" />


    <TextView
        android:id="@+id/txt_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_city"
        android:layout_centerHorizontal="true"
        android:text="24"
        android:textSize="100sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_max_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_temperature"
        android:layout_alignParentEnd="true"
        android:text="28"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/txt_weather_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_temperature"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="Raining"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txt_windspeed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_weather_status"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/wind_speed"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_windspeed_label"
        android:layout_alignStart="@+id/txt_clouds"
        android:layout_toEndOf="@+id/txt_windspeed_label"
        android:text="30kmh"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_clouds_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_windspeed_label"
        android:layout_marginBottom="10dp"
        android:text="@string/clouds_status"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_clouds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_wind_speed"
        android:layout_alignBaseline="@+id/txt_clouds_label"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/txt_clouds_label"
        android:text="30kmh"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_clouds_label"
        android:layout_marginBottom="10dp"
        android:text="@string/longitudes"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_longitude_label"
        android:layout_alignStart="@+id/txt_clouds"
        android:text="121313141414" />

    <TextView
        android:id="@+id/txt_latitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_longitude_label"
        android:text="@string/latitude"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_latitude_label"
        android:layout_alignStart="@+id/txt_clouds"
        android:text="121313141414" />

</RelativeLayout>